Fix spacing and colors and texts

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-  
+
+html {
+  scroll-padding-top: 150px; /* Adjust this value as needed */
+}
